--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
       <a-text
         value="This content will always face you."
         look-at="[gps-camera]"
-        scale="30 30 30"37.19229961341942, -3.6166463715291868
+        scale="30 30 30"
         gps-entity-place="latitude: 19229961341942; longitude: -3.6166463715291868;"
       ></a-text>
       <a-camera gps-camera rotation-reader> </a-camera>
