--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <script src="./Script1.js"></script>
 <body style='margin: 0; overflow: hidden;'>
+	<div id="Mensaje">o</div>
     <a-scene
        vr-mode-ui="enabled: false"
 		embedded
