--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
             {
                 latitud: 37.192246, 
                 longitud: -3.616596
+            },
+            {
+                latitud: 36.992039, 
+                longitud: -3.568085
             },/*
             {
                 latitud: 37.192249,
