--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             texto.setAttribute('gps-entity-place', `latitude: ${modelos[i].latitud}; longitude: ${modelos[i].longitud};`);
 
             var imagen = document.createElement("a-imagen");
-            texto.setAttribute('src', 'https://i1.sndcdn.com/avatars-000346735331-vjxpem-t240x240.jpg');
+            texto.setAttribute('src', 'https://i.pinimg.com/originals/2c/46/e1/2c46e1e21b76ea347bba76e650b98d90.jpg');
             texto.setAttribute('scale', '0.5 0.5 0.5');
             video.setAttribute('position', '90 0 0');
             texto.setAttribute('gps-entity-place', `latitude: ${modelos[i].latitud}; longitude: ${modelos[i].longitud};`);
