--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             var video = document.createElement("a-video");
             video.setAttribute('src', 'https://www.youtube.com/watch?v=ELp3FSsmkGQ');
             video.setAttribute('scale', '0.5 0.5 0.5');
-            video.setAttribute('position=', '90 0 0');
+            video.setAttribute('position', '90 0 0');
             video.setAttribute('gps-entity-place', `latitude: ${modelos[i].latitud}; longitude: ${modelos[i].longitud};`);
 
             var scene = document.querySelector('a-scene');
