--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             video.setAttribute('gps-entity-place', `latitude: ${modelos[i].latitud}; longitude: ${modelos[i].longitud};`);
 
             var scene = document.querySelector('a-scene');
-            scene.appendChild(modelo);
+            scene.appendChild(model);
         }
     }
   
