--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             scene.appendChild(imagen);
           
             var video = document.createElement("a-video");
-            video.setAttribute('src', './assets/Clixé-Under.mp4');
+            video.setAttribute('src', './assets/cancion.mp4');
             video.setAttribute('scale', '0.5 0.5 0.5');
             video.setAttribute('position', '0 0 0');
             video.setAttribute('gps-entity-place', `latitude: ${modelos[i].latitud}; longitude: ${modelos[i].longitud};`);
